<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="8dp"
        android:text="@string/CREATOR"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTN5"
        android:layout_width="417dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/BTN5"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN4" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="314dp"
        android:layout_marginRight="314dp"
        android:layout_marginBottom="58dp"
        android:text="@string/TB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BTN4"
        android:layout_width="417dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/BTN4"
        app:layout_constraintBottom_toTopOf="@+id/BTN5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN3" />

    <Button
        android:id="@+id/BTN2"
        android:layout_width="411dp"
        android:layout_height="63dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:text="@string/BTN2"
        app:layout_constraintBottom_toTopOf="@+id/BTN3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN1" />

    <Button
        android:id="@+id/BTN1"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="9dp"
        android:text="@string/BTN1"
        app:layout_constraintBottom_toTopOf="@+id/BTN2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/BTN3"
        android:layout_width="417dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:text="@string/BTN3"
        app:layout_constraintBottom_toTopOf="@+id/BTN4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="8dp"
        android:text="@string/BUD"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/BTN1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>